@@ -96,6 +96,10 @@
     buttons. (QGtkStyle only)
 56. Support reading of lyrics from HTTP server - specify a HTTP url as MPD
     music path.
+57. Hack-around QGtkStyle focus issues if a spin-box is set to have no buttons.
+    Cantata's Gtk3 style sin boxes are mimiced using a spin-box with no
+    buttons, and 2 toolbuttons. QGtkStyle messes up the widget focus if this is
+    used, so Cantata's spin box attempts to work-around this.
 
 0.9.2
 -----
